examples/test/testpolicy18326.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18326
  namespace: namespace475
spec:
  podSelector:
    matchLabels:
      key45: value17
      key15: value6
      key42: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value44
          key26: value0
          key32: value27
      podSelector:
        matchLabels:
          key46: value29
          key29: value43
          key30: value35
